# ZK-Inference-Proof-Of-Concept

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  build.rs
client/python/: model1.py
proofs/image_validity/: Nargo.toml  Prover.toml
proofs/server_inference_linear/: Nargo.toml  Prover.toml
proto/: fed.proto
scripts/: batch_test.sh  multi_clients.sh  provision_and_prove.sh
server/: Cargo.toml
server/python/: model2.py
