[package]
name = "federated-gpt2-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros","fs","process"] }
tonic = { version = "0.14.2", features = ["transport"] }
prost = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
tonic-prost = "0.14.2"
uuid = { version = "1", features = ["v4"] }
serde_json="1.0"
bincode="1.3"
anyhow="1.0"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.6"
aes-gcm = "0.10"
rand = "0.8"


[build-dependencies]
tonic-prost-build="0.14.2"
